--- a/index.pug
+++ b/index.pug
@@ -10,7 +10,7 @@
     .bottom
     .center
       h2 Please Sign In
-      input(type="email" placeholder="email")
+      input(type="email" placeholder="Hoth Email")
       input(type="password" placeholder="password")
       h2 &nbsp;
 </body>
